<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textoConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmarDatos"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:textStyle="bold"
            >

        </TextView>


        <TextView
            android:id="@+id/editarNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarNombre"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingLeft="30dp"
            >

        </TextView>

        <TextView
            android:id="@+id/editarFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarFecha"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingLeft="30dp"
            >

        </TextView>

        <TextView
            android:id="@+id/editarTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarTelefono"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingLeft="30dp"
            />

        <TextView
            android:id="@+id/editarMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarMail"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingLeft="30dp"
            />

        <TextView
            android:id="@+id/editarDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editarDescripcion"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="20sp"
            android:layout_marginTop="@dimen/margin_top"
            android:paddingLeft="30dp"
            />

        <Button
            android:id="@+id/atras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/editarDatos"
            android:layout_marginTop="@dimen/margin_top"/>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>